use WITH_ variables names for external libraries, as that seems to be the widely used convention

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -7,31 +7,31 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 
 # perform common checks
 find_package (Threads REQUIRED)
-option(USE_LAPACK "Enable use of lapack (default: if found)" ON)
-if(USE_LAPACK)
+option(WITH_LAPACK "Enable use of lapack (default: if found)" ON)
+if(WITH_LAPACK)
 find_package(LAPACK)
 if(LAPACK_FOUND)
 add_definitions(-DMT_LAPACK)
 endif(LAPACK_FOUND)
-else(USE_LAPACK)
-message(STATUS "Use of LAPACK disabled by user (option USE_LAPACK)")
-endif(USE_LAPACK)
+else(WITH_LAPACK)
+message(STATUS "Use of LAPACK disabled by user (option WITH_LAPACK)")
+endif(WITH_LAPACK)
 
 include(FindPkgConfig)
-option(USE_OPENCV "Enable use of lapack (default: if found)" ON)
-if(USE_OPENCV)
-pkg_search_module(OPENCV opencv>=2.3 opencv-2.3.1)
+option(WITH_OPENCV "Enable use of lapack (default: if found)" ON)
+if(WITH_OPENCV)
+pkg_search_module(OPENCV opencv>=2.4)
 if(OPENCV_FOUND)
 message(STATUS "Found OpenCV ${OPENCV_VERSION}")
 add_definitions(-DMT_OPENCV -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS ${OPENCV_CFLAGS})
 endif(OPENCV_FOUND)
-else(USE_OPENCV)
-message(STATUS "Use of OpenCV disabled by user (option USE_OPENCV)")
-endif(USE_OPENCV)
+else(WITH_OPENCV)
+message(STATUS "Use of OpenCV disabled by user (option WITH_OPENCV)")
+endif(WITH_OPENCV)
 
 # allow users to switch off compilation of unit-tests
-option(USE_GTEST "Should we run unit-tests (default yes)" ON)
-if(USE_GTEST)
+option(WITH_GTEST "Should we run unit-tests (default yes)" ON)
+if(WITH_GTEST)
   option(EXAMPLES_AS_TESTS "Should examples be used as tests? (default yes)" ON)
         include(CheckIncludeFileCXX)
         check_include_file_cxx("gtest/gtest.h" GTEST_H_FOUND)
@@ -46,16 +46,16 @@ if(USE_GTEST)
                         message(WARNING "Did not find gtest.h, cannot enable testing")
                 set(TESTING_ENABLED)
         endif(GTEST_H_FOUND)
-else(USE_GTEST)
+else(WITH_GTEST)
 	set(EXAMPLES_AS_TESTS OFF)
-endif(USE_GTEST)
+endif(WITH_GTEST)
 
 # configure Python
-option(USE_PYTHON "Build python bindings using SWIG. Will be omitted of swig or NumPy are not found" ON)
-if(USE_PYTHON)
+option(WITH_PYTHON "Build python bindings using SWIG. Will be omitted of swig or NumPy are not found" ON)
+if(WITH_PYTHON)
   find_package(SWIG 2.0)
   if(SWIG_FOUND)
-    include(${SWIG_USE_FILE})
+    include(${SWIG_WITH_FILE})
     find_package(PythonInterp 2.7)
     find_package(PythonLibs 2.7)
     find_package(NumPy)
@@ -74,7 +74,7 @@ if(USE_PYTHON)
   else(SWIG_FOUND)
     message(STATUS "swig not found, will not build Python bindings")
   endif(SWIG_FOUND)
-endif(USE_PYTHON)
+endif(WITH_PYTHON)
 
 # common configuration
 include_directories(src)
@@ -91,10 +91,10 @@ set(MLR_CXX_FLAGS "-std=c++0x ${MLR_CXX_FLAGS}")
 
 # set Gui-GL definition globally for convenience
 include(src/Gui/gl.cmake OPTIONAL)
-if(USE_OPENGL)
+if(WITH_OPENGL)
 set(MLR_CXX_FLAGS "${MLR_CXX_FLAGS} -DMT_GL")
-endif(USE_OPENGL)
-message(STATUS "Using OpenGL: ${USE_OPENGL}")
+endif(WITH_OPENGL)
+message(STATUS "Using OpenGL: ${WITH_OPENGL}")
 
 # target to create includes
 add_custom_target(sourceinc ALL
