--- a/share/src/Hardware/G4/CMakeLists.txt
+++ b/share/src/Hardware/G4/CMakeLists.txt
@@ -1,10 +1,10 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-option(USE_G4 "Enable G4 Tracker" OFF)
+option(WITH_G4 "Enable G4 Tracker" OFF)
 set(G4ROOT $ENV{MLR_LIBPATH} CACHE PATH "Base dir for G4 tracker" )
 
-if(USE_G4)
+if(WITH_G4)
 
 find_library(G4TRACK G4Track PATHS ${G4ROOT})
 message(STATUS "G4Track location: ${G4TRACK}")
@@ -23,4 +23,4 @@ else(G4TRACK)
 message(STATUS "G4 tracker support not built because libG4Track not found (checked in ${G4ROOT})")
 endif(G4TRACK)
 
-endif(USE_G4)
+endif(WITH_G4)
