--- a/share/src/Ors/CMakeLists.txt
+++ b/share/src/Ors/CMakeLists.txt
@@ -1,16 +1,16 @@
 # TODO add automatic checking for presence
-option(USE_PHYSX "Use NVidia PhysX libraries" OFF)
-if(USE_PHYSX)
+option(WITH_PHYSX "Use NVidia PhysX libraries" OFF)
+if(WITH_PHYSX)
         add_definitions(-DMT_PHYSX)
-endif(USE_PHYSX)
-option(USE_ODE "Use ODE" OFF)
-if(USE_ODE)
+endif(WITH_PHYSX)
+option(WITH_ODE "Use ODE" OFF)
+if(WITH_ODE)
         add_definitions(-DMT_ODE)
-endif(USE_ODE)
-option(USE_OPENMP "Use OpenMP" OFF)
-if(USE_OPENMP)
+endif(WITH_ODE)
+option(WITH_OPENMP "Use OpenMP" OFF)
+if(WITH_OPENMP)
         add_definitions(-fopenmp -DOPENMP)
-endif(USE_OPENMP)
+endif(WITH_OPENMP)
 # TODO option(MT_CUDA "Use CUDA" OFF)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
