--- a/share/src/Hardware/ueyecamera/CMakeLists.txt
+++ b/share/src/Hardware/ueyecamera/CMakeLists.txt
@@ -1,10 +1,10 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-option(USE_UEYE "Enable UEye Camera" ON)
+option(WITH_UEYE "Enable UEye Camera" ON)
 set(UEYE_ROOT $ENV{MLR_LIBPATH} CACHE PATH "Base dir for UEye library" )
 
-if(USE_UEYE)
+if(WITH_UEYE)
 
 find_library(UEYE ueye_api PATHS ${UEYE_ROOT})
 message(STATUS "UEye API location: ${UEYE}")
@@ -21,4 +21,4 @@ else(UEYE)
 message(STATUS "UEye camera support not built because libueye_api not found (checked in ${UEYE_ROOT})")
 endif(UEYE)
 
-endif(USE_UEYE)
+endif(WITH_UEYE)
