make ann and lapack optional

--- a/share/src/Algo/CMakeLists.txt
+++ b/share/src/Algo/CMakeLists.txt
@@ -4,12 +4,15 @@ project(MLR_CORE)
 include(CheckIncludeFileCXX)
 
 check_include_file_CXX(ANN/ANN.h ANN_HEADER_FOUND)
-if(NOT ANN_HEADER_FOUND)
-message(FATAL_ERROR "ANN/ANN.h not found. Is library missing?")
-endif(NOT ANN_HEADER_FOUND)
-if(NOT LAPACK_FOUND)
-message(FATAL_ERROR "Lapack missing, but is required for Algo library")
-endif(NOT LAPACK_FOUND)
+if(ANN_HEADER_FOUND)
+add_definitions(-DMT_ANN)
+else(ANN_HEADER_FOUND)
+message(STATUS "ANN/ANN.h not found, will build without ANN library")
+endif(ANN_HEADER_FOUND)
+if(LAPACK_FOUND)
+include_directories(${LAPACK_INCLUDE_DIR})
+add_definitions(${LAPACK_DEFINITIONS})
+endif(LAPACK_FOUND)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
@@ -17,8 +20,5 @@ include(.sources.cmake)
 
 add_library(Algo SHARED ${SOURCES})
 target_link_libraries(Algo LINK_PRIVATE Core Gui ann)
-add_definitions(-DMT_ANN)
 
-include_directories(${LAPACK_INCLUDE_DIR})
-add_definitions(${LAPACK_DEFINITIONS})
 
