typo fix in header name

--- a/share/src/Ors/CMakeLists.txt
+++ b/share/src/Ors/CMakeLists.txt
@@ -7,7 +7,7 @@ if(WITH_PHYSX)
         if(PHYSX_ROOT)
           set(CMAKE_REQUIRED_INCLUDES ${PHYSX_ROOT}/include)
         endif(PHYSX_ROOT)
-        check_include_file_cxx("physx/PxPhysx.h" PHYSX_H_FOUND)
+        check_include_file_cxx("physx/PxPhysX.h" PHYSX_H_FOUND)
         unset(CMAKE_REQUIRED_INCLUDES)
         if(PHYSX_H_FOUND)
             add_definitions(-DMT_PHYSX)
