--- a/share/src/Ors/CMakeLists.txt
+++ b/share/src/Ors/CMakeLists.txt
@@ -2,20 +2,49 @@ include(CheckIncludeFile)
 include(CheckIncludeFileCXX)
 
 option(WITH_PHYSX "Use NVidia PhysX libraries" OFF)
-option(PHYSX_ROOT "Root path for searchin PhysX" ${MLR_LIBPATH})
+set(PHYSX_ROOT $ENV{MLR_LIBPATH} CACHE PATH "Root path for searching PhysX")
 if(WITH_PHYSX)
-        if(PHYSX_ROOT)
-          set(CMAKE_REQUIRED_INCLUDES ${PHYSX_ROOT}/include)
-        endif(PHYSX_ROOT)
-        check_include_file_cxx("physx/PxPhysX.h" PHYSX_H_FOUND)
-        unset(CMAKE_REQUIRED_INCLUDES)
-        if(PHYSX_H_FOUND)
-            add_definitions(-DMT_PHYSX)
-        else(PHYSX_H_FOUND)
-            message(STATUS "PhysX header not found")
-        endif(PHYSX_H_FOUND)                
+  if(PHYSX_ROOT)
+    message(STATUS "PhysX root: ${PHYSX_ROOT}")        
+    set(CMAKE_REQUIRED_INCLUDES ${PHYSX_ROOT}/include ${PHYSX_ROOT}/include/physx)
+    set(CMAKE_REQUIRED_DEFINITIONS -D_DEBUG)
+  else(PHYSX_ROOT)
+    message(STATUS "No PhysX root given")        
+  endif(PHYSX_ROOT)
+        
+  check_include_file_cxx("physx/PxPhysicsAPI.h" PHYSX_H_FOUND)
+
+  if(PHYSX_H_FOUND)
+    add_definitions(-DMT_PHYSX -D_DEBUG)
+    include_directories(${CMAKE_REQUIRED_INCLUDES})
+    link_directories(${PHYSX_ROOT}/lib)
+    set(PHYSX_LIBRARIES  
+        PvdRuntimeCHECKED 
+        SimulationControllerCHECKED
+        SceneQueryCHECKED
+        LowLevelCHECKED
+        LowLevelClothCHECKED
+        PhysX3VehicleCHECKED
+        PhysX3CookingCHECKED
+        PhysX3ExtensionsCHECKED
+        PhysX3CharacterKinematicCHECKED
+        RepX3CHECKED
+        RepXUpgrader3CHECKED
+        PhysXProfileSDKCHECKED
+        PxTaskCHECKED
+        PhysX3        
+        PhysX3CommonCHECKED
+    )
+  else(PHYSX_H_FOUND)
+      message(STATUS "PhysX header not found")
+  endif(PHYSX_H_FOUND)                
+  unset(CMAKE_REQUIRED_INCLUDES)
+  unset(CMAKE_REQUIRED_DEFINITIONS)
 endif(WITH_PHYSX)
+
+# check for ODE
 option(WITH_ODE "Use ODE" OFF)
+set(ODE_ROOT $ENV{MLR_LIBPATH} CACHE PATH "Root path for searching ODE")
 if(WITH_ODE)
         if(ODE_ROOT)
           set(CMAKE_REQUIRED_INCLUDES ${ODE_ROOT}/include)
@@ -25,6 +54,9 @@ if(WITH_ODE)
           check_include_file("ode/internal/objects.h" ODE_INTERNAL_H_FOUND)
           if(ODE_INTERNAL_H_FOUND)
             add_definitions(-DMT_ODE)
+            include_directories(${CMAKE_REQUIRED_INCLUDES})
+            link_directories(${ODE_ROOT}/lib)
+            set(ODE_LIBRARIES ode)
           else(ODE_INTERNAL_H_FOUND)
             message(STATUS "ode.h found, but ode/internal directory missing -- you need to build ODE from source for Ors. Skipping ODE support")
           endif(ODE_INTERNAL_H_FOUND)
@@ -44,7 +76,8 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 include(.sources.cmake)
 
 add_library(Ors SHARED ${SOURCES})
-target_link_libraries(Ors LINK_PRIVATE Algo Core Gui extern_SWIFT)
+target_link_libraries(Ors LINK_PUBLIC ${PHYSX_LIBRARIES} LINK_PRIVATE Algo Core Gui extern_SWIFT ${ODE_LIBRARIES})
+
 
 # Python wrappers
 if(PYTHON_OK)
