--- a/share/examples/Hardware/kinect/CMakeLists.txt
+++ b/share/examples/Hardware/kinect/CMakeLists.txt
@@ -7,7 +7,7 @@ if(LIBFREENECT_FOUND)
 include(.sources.cmake)
 add_executable(x_${NAME} ${SOURCES})
 
-target_link_libraries(x_${NAME} Core Perception Hardware_kinect System)
+target_link_libraries(x_${NAME} Core Ors Perception Hardware_kinect System)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
