--- a/share/teaching/AutonomousSystems/e08-OpenCV/CMakeLists.txt
+++ b/share/teaching/AutonomousSystems/e08-OpenCV/CMakeLists.txt
@@ -2,7 +2,7 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-
+if(OPENCV_FOUND)
 set(SOURCES main.cpp)
 
 link_directories(${OPENCV_LIBRARY_DIRS})
@@ -21,3 +21,6 @@ target_link_libraries(x_${NAME} Core ${OPENCV_LIBRARIES})
 
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+
+endif(OPENCV_FOUND)
+
