use check_library instead of find_library

--- a/share/src/Hardware/G4/CMakeLists.txt
+++ b/share/src/Hardware/G4/CMakeLists.txt
@@ -5,22 +5,26 @@ option(WITH_G4 "Enable G4 Tracker" OFF)
 set(G4ROOT $ENV{MLR_LIBPATH} CACHE PATH "Base dir for G4 tracker" )
 
 if(WITH_G4)
+  include(CheckLibraryExists)
 
-find_library(G4TRACK G4Track PATHS ${G4ROOT}/lib)
-message(STATUS "G4Track location: ${G4TRACK}")
+  check_library_exists(G4Track g4_close_tracker ${G4ROOT}/Lib/Win32 G4TRACK_FOUND)
+  if(G4TRACK_FOUND)
+	set(HAVE_G4TRACK 1)
+	link_directories(${G4ROOT}/Lib/Win32)
+  endif(G4TRACK_FOUND)
 
-if(G4TRACK)
-include(.sources.cmake)
+  if(HAVE_G4TRACK)
+    include(.sources.cmake)
 
-set(TARGET Hardware_${NAME})
-add_library(${TARGET} SHARED ${SOURCES})
-include_directories(${G4ROOT}/include)
-add_definitions(-DG4_INSTALLED)
-target_link_libraries(${TARGET} 
-        LINK_PRIVATE Core ${G4TRACK})
+    set(TARGET Hardware_${NAME})
+    add_library(${TARGET} SHARED ${SOURCES})
+    include_directories(${G4ROOT}/include ${G4ROOT}/Inc)
+    add_definitions(-DG4_INSTALLED)
+    target_link_libraries(${TARGET} 
+        LINK_PRIVATE Core G4Track)
 
-else(G4TRACK)
-message(STATUS "G4 tracker support not built because libG4Track not found (checked in ${G4ROOT})")
-endif(G4TRACK)
+  else(HAVE_G4TRACK)
+    message(STATUS "G4 tracker support not built because libG4Track not found (checked in ${G4PATH})")
+  endif(HAVE_G4TRACK)
 
 endif(WITH_G4)
