--- a/share/examples/Hardware/g4_raw/CMakeLists.txt
+++ b/share/examples/Hardware/g4_raw/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 if(G4TRACK)
 
 include(.sources.cmake)
+include_directories(${G4ROOT}/include ${G4ROOT}/Inc)
 add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Hardware_G4)
