use only one .gitignore file

--- a/usr/RL/TestMaze_II/.gitignore
+++ b/usr/RL/TestMaze_II/.gitignore
@@ -1,1 +1,7 @@
 data
+console_history.txt
+nohup.out
+BatchWorker_quiet/BatchWorker_quiet
+BatchWorker_verbose/BatchWorker_verbose
+GTest/GTest
+MazeGUI/MazeGUI
