--- a/share/projects/data_recording/g4_data_analysis/Makefile
+++ b/share/projects/data_recording/g4_data_analysis/Makefile
@@ -38,19 +38,22 @@ RM = /usr/bin/cmake -E remove -f
 # Escaping for special characters.
 EQUALS = =
 
+# The program to use to edit the cache.
+CMAKE_EDIT_COMMAND = /usr/bin/ccmake
+
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/mtoussai/git/mlr/share
+CMAKE_SOURCE_DIR = /home/ingo/Source/mlr/share
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/mtoussai/git/mlr/share
+CMAKE_BINARY_DIR = /home/ingo/Source/mlr/share
 
 #=============================================================================
 # Targets provided globally by CMake.
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running interactive CMake command-line interface..."
-	/usr/bin/cmake -i .
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
+	/usr/bin/ccmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
@@ -79,14 +82,14 @@ test/fast: test
 
 # The main all target
 all: cmake_check_build_system
-	cd /home/mtoussai/git/mlr/share && $(CMAKE_COMMAND) -E cmake_progress_start /home/mtoussai/git/mlr/share/CMakeFiles /home/mtoussai/git/mlr/share/projects/data_recording/g4_data_analysis/CMakeFiles/progress.marks
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/mtoussai/git/mlr/share/CMakeFiles 0
+	cd /home/ingo/Source/mlr/share && $(CMAKE_COMMAND) -E cmake_progress_start /home/ingo/Source/mlr/share/CMakeFiles /home/ingo/Source/mlr/share/projects/data_recording/g4_data_analysis/CMakeFiles/progress.marks
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/all
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/ingo/Source/mlr/share/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
 clean:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/clean
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/clean
 .PHONY : clean
 
 # The main clean target
@@ -95,22 +98,22 @@ clean/fast: clean
 
 # Prepare targets for installation.
 preinstall: all
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/preinstall
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/preinstall
 .PHONY : preinstall
 
 # Prepare targets for installation.
 preinstall/fast:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/preinstall
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/preinstall
 .PHONY : preinstall/fast
 
 # clear depends
 depend:
-	cd /home/mtoussai/git/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
+	cd /home/ingo/Source/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
 .PHONY : depend
 
 # Convenience name for target.
 projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/rule:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/rule
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/rule
 .PHONY : projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/rule
 
 # Convenience name for target.
@@ -119,37 +122,37 @@ x_g4_data_analysis: projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_dat
 
 # fast build rule for target.
 x_g4_data_analysis/fast:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build
 .PHONY : x_g4_data_analysis/fast
 
 # target to build an object file
 src/feedgnuplot.o:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/feedgnuplot.o
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/feedgnuplot.o
 .PHONY : src/feedgnuplot.o
 
 # target to preprocess a source file
 src/feedgnuplot.i:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/feedgnuplot.i
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/feedgnuplot.i
 .PHONY : src/feedgnuplot.i
 
 # target to generate assembly for a file
 src/feedgnuplot.s:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/feedgnuplot.s
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/feedgnuplot.s
 .PHONY : src/feedgnuplot.s
 
 # target to build an object file
 src/main.o:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/main.o
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/main.o
 .PHONY : src/main.o
 
 # target to preprocess a source file
 src/main.i:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/main.i
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/main.i
 .PHONY : src/main.i
 
 # target to generate assembly for a file
 src/main.s:
-	cd /home/mtoussai/git/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/main.s
+	cd /home/ingo/Source/mlr/share && $(MAKE) -f projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/build.make projects/data_recording/g4_data_analysis/CMakeFiles/x_g4_data_analysis.dir/src/main.s
 .PHONY : src/main.s
 
 # Help Target
@@ -179,6 +182,6 @@ help:
 # No rule that depends on this can have commands that come from listfiles
 # because they might be regenerated.
 cmake_check_build_system:
-	cd /home/mtoussai/git/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 0
+	cd /home/ingo/Source/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 0
 .PHONY : cmake_check_build_system
 
