--- a/share/projects/mlr_ros/CMakeLists.txt
+++ b/share/projects/mlr_ros/CMakeLists.txt
@@ -1,7 +1,21 @@
+project(mlr_ros)
+
 # select what to compile
 include(.slicedef.cmake)
 
-foreach(DIR ${CURRENT_SLICE})
-add_subdirectory(${DIR})
-endforeach(DIR ${CURRENT_SLICE})
+if(ROSBUILD)
+  include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+  set(ENV{ROS_PACKAGE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}:$ENV{ROS_PACKAGE_PATH})
+  set(ROSBUILD_DONT_REDEFINE_PROJECT ON)
 
+  rosbuild_init()
+  # all 
+  #set the default path for built executables to the "bin" directory
+  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+  #set the default path for built libraries to the "lib" directory
+  set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+
+  foreach(DIR ${CURRENT_SLICE})
+    add_subdirectory(${DIR})
+  endforeach(DIR ${CURRENT_SLICE})
+endif(ROSBUILD)
