--- a/share/projects/mlr_ros/circle_test/CMakeLists.txt
+++ b/share/projects/mlr_ros/circle_test/CMakeLists.txt
@@ -1,30 +1,8 @@
 cmake_minimum_required(VERSION 2.4.6)
 project(circle_test)
 
-if(WITH_ROS)
+if(ROSBUILD)
 
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-set(ENV{ROS_PACKAGE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/..:$ENV{ROS_PACKAGE_PATH})
-
-include_directories(${CMAKE_SOURCE_DIR}/src)
-
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-set(ROS_BUILD_TYPE RelWithDebInfo)
-
-set(ROSBUILD_DONT_REDEFINE_PROJECT ON)
-rosbuild_init()
-
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 include(.sources.cmake)
 rosbuild_add_executable(circle_test ${SOURCES})
 target_link_libraries(circle_test Core Ors Gui)
@@ -40,4 +18,4 @@ target_link_libraries(circle_test Core Ors Gui)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 
-endif(WITH_ROS)
+endif(ROSBUILD)
