--- a/share/projects/mlr_ros/CMakeLists.txt
+++ b/share/projects/mlr_ros/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(mlr_ros)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 # select what to compile
 include(.slicedef.cmake)
 
